Add tracing context propagation (reactive)
See also commit 3971eb74 for more details.